formbricks/formbricks/templates/mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formbricks-mailpit
spec:
  selector:
    matchLabels:
      app: formbricks-mailpit
  template:
    metadata:
      labels:
        app: formbricks-mailpit
    spec:
      containers:
      - name: mailpit
        image: axllent/mailpit
        ports:
        - containerPort: 1025
        - containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: formbricks-mailpit
spec:
  ports:
  - name: smtp
    port: 1025
    targetPort: 1025
  - name: webui
    port: 8025
    targetPort: 8025
  selector:
    app: formbricks-mailpit
