formbricks/formbricks/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formbricks-redis
spec:
  selector:
    matchLabels:
      app: formbricks-redis
  template:
    metadata:
      labels:
        app: formbricks-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: formbricks-redis
spec:
  ports:
  - port: 6379
  selector:
    app: formbricks-redis
