formbricks/formbricks/templates/ingress-mailpit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formbricks-mailpit-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - mailpit.app.xixtu.eu
    secretName: mailpit-tls-certs
  rules:
  - host: mailpit.app.xixtu.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: formbricks-mailpit
            port:
              number: 8025
